<resources>
    <string name="app_name">Pharmacie Maya Maya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pharmacie Maya Maya</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Envoyez</string>
    <string name="menu_info">Pharmacie Maya Maya</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_panier">Produits</string>
    <string name="menu_produits">Produits</string>
    <string name="menu_ordo">Ordonnance</string>
    <string name="ordo_form_name">Full name</string>
    <string name="ordo_form_first">Last name</string>
    <string name="ordo_form_number">Telephone number</string>
    <string name="ordo_form_photo">Photo</string>
    <string name="ordo_form_comments">Commentaires</string>
    <string name="ordo_form_file">No  file selected</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_search">Search</string>
    <string name="app_search_placeholder">What are you looking for ?</string>
    <string name="cart_item_remove">Remove</string>



</resources>
