<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#0a7f72"
    tools:context=".ui.OrdonnanceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/coordinatedForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTintMode="multiply"
        android:padding="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="149dp"
            android:layout_height="144dp"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="9dp"/>


        <EditText
            android:id="@+id/nom"
            android:layout_width="664dp"
            android:layout_height="45dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/ordo_form_name"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/telephone"
            android:layout_width="664dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Numero de téléphone"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nom" />

        <Button
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/ordo_form_photo"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone"
            android:layout_margin="9dp"/>

        <TextView
            android:id="@+id/file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordo_form_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo"
            android:layout_margin="9dp"/>

        <EditText
            android:id="@+id/comments"
            android:layout_width="712dp"
            android:layout_height="81dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="9dp"
            android:layout_margin="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_path" />

        <Button
            android:id="@+id/form_envois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/menu_send"
            android:textColor="#FFFFFF"
            android:layout_margin="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comments" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>